--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,10 @@
   .stats-container{
     @apply bg-[#091F1C] p-5 rounded-lg border-[#004337] border
   }
+  .countdown{
+    @apply p-8 text-5xl text-center text-white rounded-lg lg:min-w-[150px] bg-[#013F34]
+  }
+  .countdown-label{
+    @apply text-center text-white uppercase text-sm pt-4
+  }
 }
